Archive2/36/17502cb7c678ec/output
main.cpp: In function 'int main()':
main.cpp:10:18: error: cast from 'int*' to 'int' loses precision [-fpermissive]
   *pos = (int)(&x);
                  ^
main.cpp:4:6: warning: unused variable 'values' [-Wunused-variable]
  int values[2] = {7,3};
      ^
